finished work with internet view

--- a/app/src/main/res/drawable/background_advice.xml
+++ b/app/src/main/res/drawable/background_advice.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <solid
-                android:color="#eeebfb">
+                android:color="#f0eefa">
             </solid>
             <corners
                 android:radius="2dp"/>
