--- a/app/src/main/res/layout/item_advice.xml
+++ b/app/src/main/res/layout/item_advice.xml
@@ -42,8 +42,8 @@
         android:layout_below="@id/item_advice_title"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/spacing_normal"
-        android:layout_marginEnd="@dimen/spacing_normal"
-        android:layout_marginStart="@dimen/spacing_normal"
+        android:layout_marginEnd="@dimen/spacing_two_normal"
+        android:layout_marginStart="@dimen/spacing_two_normal"
         android:alpha="0.54"
         android:layout_marginTop="4dp"
         android:gravity="center_horizontal"
