--- a/app/src/main/res/drawable/bottom_nav_bar_tab_color.xml
+++ b/app/src/main/res/drawable/bottom_nav_bar_tab_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@android:color/darker_gray"  />
-    <item android:state_checked="true" android:color="@color/azul" />
+    <item android:color="#707071" />
+    <item android:state_checked="true" android:color="#4050e2"/>
 </selector>
