--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -18,7 +18,7 @@
         app:tabBackground="@color/colorPrimary"
         app:tabIndicatorColor="@color/white"
         app:tabSelectedTextColor="@color/white"
-        app:tabTextColor="@color/white"/>
+        app:tabTextColor="#b3ffffff"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/resources_activity_view_pager"
