--- a/app/src/main/res/layout/fragment_resourse_by_period.xml
+++ b/app/src/main/res/layout/fragment_resourse_by_period.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:visibility="gone"
         />
 
     <TextView
@@ -21,8 +22,7 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,15 +87,15 @@
 
                 </LinearLayout>
                 <LinearLayout
-                    android:id="@+id/header_title"
+                    android:id="@+id/header_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/padding_normal">
-                    <TextView
+                    <com.livetyping.moydom.ui.custom.SwipableTextView
                         android:id="@+id/header_type"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
                         android:lineSpacingExtra="4sp"
@@ -143,7 +143,8 @@
                         android:textSize="32sp"
                         android:textStyle="bold"
                         app:firstPartTextSize="32sp"
-                        app:secondPartTextSize="20sp"/>
+                        app:secondPartTextSize="20sp"
+                        app:withSpace="false"/>
 
                     <com.livetyping.moydom.ui.custom.MultisizeTextView
                         android:id="@+id/total_value"
@@ -180,7 +181,8 @@
                         android:textSize="32sp"
                         android:textStyle="bold"
                         app:firstPartTextSize="32sp"
-                        app:secondPartTextSize="20sp"/>
+                        app:secondPartTextSize="20sp"
+                        app:withSpace="false"/>
                     <com.livetyping.moydom.ui.custom.MultisizeTextView
                         android:id="@+id/average_value"
                         android:layout_width="wrap_content"
