Graph design improvements

--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        app:tabBackground="@color/colorPrimary"
+        android:background="@color/colorPrimary"
+        app:tabBackground="?attr/selectableItemBackground"
         app:tabIndicatorColor="@color/white"
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="#b3ffffff"/>
