--- a/app/src/main/res/layout/activity_appeal.xml
+++ b/app/src/main/res/layout/activity_appeal.xml
@@ -6,90 +6,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
+    android:orientation="vertical"
     tools:context="com.livetyping.moydom.ui.activity.appeal.AppealActivity">
 
     <include layout="@layout/toolbar"/>
 
-    <ScrollView
+    <RelativeLayout
+        android:id="@+id/activity_appeal_content_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/activity_appeal_add_photo"
+        android:layout_height="match_parent"
         android:layout_below="@+id/toolbar">
 
-        <RelativeLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_above="@+id/activity_appeal_add_photo">
 
-            <TextView
-                android:id="@+id/activity_appeal_categories_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_normal"
-                android:text="@string/category"/>
-
-            <TextView
-                android:id="@+id/activity_appeal_categories"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/activity_appeal_categories_title"
-                android:layout_marginEnd="@dimen/spacing_normal"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_tiny"
-                android:drawableEnd="@drawable/dropdown"
-                android:text="@string/chose_category"
-                android:textColor="@color/close_gray"
-                android:textSize="@dimen/font_large"/>
+                android:layout_height="wrap_content">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@id/activity_appeal_categories"
-                android:layout_marginEnd="@dimen/spacing_normal"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="4dp"
-                android:background="#1e000000"/>
+                <TextView
+                    android:id="@+id/activity_appeal_categories_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:text="@string/category"/>
 
-            <EditText
-                android:id="@+id/activity_appeal_body"
-                style="@style/Black20LeftLt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/activity_appeal_categories"
-                android:layout_marginEnd="@dimen/spacing_normal"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_huge"
-                android:background="@android:color/transparent"
-                android:gravity="start|top"
-                android:hint="@string/what_the_problem_you_have"/>
+                <TextView
+                    android:id="@+id/activity_appeal_categories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_appeal_categories_title"
+                    android:layout_marginEnd="@dimen/spacing_normal"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_tiny"
+                    android:drawableEnd="@drawable/dropdown"
+                    android:text="@string/chose_category"
+                    android:textColor="@color/close_gray"
+                    android:textSize="@dimen/font_large"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/activity_appeal_photos_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/activity_appeal_body"
-                android:layout_marginBottom="@dimen/spacing_normal"
-                android:layout_marginEnd="@dimen/spacing_tiny"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_normal">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/activity_appeal_categories"
+                    android:layout_marginEnd="@dimen/spacing_normal"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="4dp"
+                    android:background="#1e000000"/>
 
-            </android.support.v7.widget.RecyclerView>
+                <EditText
+                    android:id="@+id/activity_appeal_body"
+                    style="@style/Black20LeftLt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_appeal_categories"
+                    android:layout_marginEnd="@dimen/spacing_normal"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_huge"
+                    android:background="@android:color/transparent"
+                    android:gravity="start|top"
+                    android:hint="@string/what_the_problem_you_have"/>
 
-        </RelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/activity_appeal_photos_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/activity_appeal_body"
+                    android:layout_marginBottom="@dimen/spacing_normal"
+                    android:layout_marginEnd="@dimen/spacing_tiny"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_normal">
 
-    </ScrollView>
+                </android.support.v7.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/activity_appeal_add_photo"
-        style="@style/Blue14CenteredUpMd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:drawablePadding="@dimen/padding_normal"
-        android:drawableStart="@drawable/add_photo"
-        android:gravity="center_vertical"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/attach_photo"
-        android:textAllCaps="true"/>
+            </RelativeLayout>
+
+        </ScrollView>
+
+        <TextView
+            android:id="@+id/activity_appeal_add_photo"
+            style="@style/Blue14CenteredUpMd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:drawablePadding="@dimen/padding_normal"
+            android:drawableStart="@drawable/add_photo"
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/attach_photo"
+            android:textAllCaps="true"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
