--- a/app/src/main/res/layout/activity_my_target.xml
+++ b/app/src/main/res/layout/activity_my_target.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,28 +11,35 @@
 
     <include layout="@layout/toolbar"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_my_target_targets"
+    <RelativeLayout
+        android:id="@+id/activity_my_target_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/activity_my_target_target"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginBottom="@dimen/spacing_huge"
-        android:layout_marginEnd="@dimen/spacing_normal"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_marginTop="@dimen/spacing_huge">
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_my_target_targets"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/activity_my_target_target"
+            android:layout_marginBottom="@dimen/spacing_huge"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_huge">
 
-    <com.livetyping.moydom.ui.custom.CustomButtonView
-        android:id="@+id/activity_my_target_target"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/spacing_two_normal"
-        app:buttonText="@string/change_target">
+        </android.support.v7.widget.RecyclerView>
 
-    </com.livetyping.moydom.ui.custom.CustomButtonView>
+        <com.livetyping.moydom.ui.custom.CustomButtonView
+            android:id="@+id/activity_my_target_target"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/spacing_two_normal"
+            app:buttonText="@string/change_target">
 
-</RelativeLayout>
+        </com.livetyping.moydom.ui.custom.CustomButtonView>
+
+
+    </RelativeLayout>
+
+</LinearLayout>
