--- a/app/src/main/res/layout/fragment_resourse_by_period.xml
+++ b/app/src/main/res/layout/fragment_resourse_by_period.xml
@@ -3,13 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.livetyping.moydom.ui.activity.ResourcesActivity">
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:id="@+id/progress_view"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center"
         android:visibility="gone"
         />
@@ -238,7 +240,11 @@
                     </FrameLayout>
                 </LinearLayout>
 
-
+                <LinearLayout
+                    android:id="@+id/statistics_zones_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"/>
             </LinearLayout>
 
         </LinearLayout>
