fixes with moving custom views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
     </FrameLayout>
 
-    <com.livetyping.moydom.presentation.features.base.custom.CustomBottomNavigationView
+    <com.livetyping.moydom.presentation.base.custom.CustomBottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
