--- a/app/src/main/res/layout/activity_other_settings.xml
+++ b/app/src/main/res/layout/activity_other_settings.xml
@@ -14,24 +14,18 @@
         android:id="@+id/activity_other_settings_intercom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:selectText="@string/intercom">
-
-    </com.livetyping.moydom.presentation.base.custom.SelectListView>
+        app:selectText="@string/intercom"/>
 
     <com.livetyping.moydom.presentation.base.custom.SelectListView
         android:id="@+id/activity_other_settings_notifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:selectText="@string/notifications">
-
-    </com.livetyping.moydom.presentation.base.custom.SelectListView>
+        app:selectText="@string/notifications"/>
 
     <com.livetyping.moydom.presentation.base.custom.SelectListView
         android:id="@+id/activity_other_settings_my_target"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:selectText="@string/my_target">
-
-    </com.livetyping.moydom.presentation.base.custom.SelectListView>
+        app:selectText="@string/my_target"/>
 
 </LinearLayout>
