--- a/app/src/main/res/layout/activity_my_target.xml
+++ b/app/src/main/res/layout/activity_my_target.xml
@@ -24,21 +24,16 @@
             android:layout_marginBottom="@dimen/spacing_huge"
             android:layout_marginEnd="@dimen/spacing_normal"
             android:layout_marginStart="@dimen/spacing_normal"
-            android:layout_marginTop="@dimen/spacing_huge">
+            android:layout_marginTop="@dimen/spacing_huge"/>
 
-        </android.support.v7.widget.RecyclerView>
-
-        <com.livetyping.moydom.presentation.features.base.custom.CustomButtonView
+        <com.livetyping.moydom.presentation.base.custom.CustomButtonView
             android:id="@+id/activity_my_target_target"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/spacing_two_normal"
-            app:buttonText="@string/change_target">
-
-        </com.livetyping.moydom.presentation.features.base.custom.CustomButtonView>
-
+            app:buttonText="@string/change_target"/>
 
     </RelativeLayout>
 
