--- a/app/src/main/res/layout/activity_new_target.xml
+++ b/app/src/main/res/layout/activity_new_target.xml
@@ -39,16 +39,14 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        <com.livetyping.moydom.presentation.features.base.custom.CustomButtonView
+        <com.livetyping.moydom.presentation.base.custom.CustomButtonView
             android:id="@+id/activity_new_target"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/spacing_two_normal"
-            app:buttonText="@string/done">
-
-        </com.livetyping.moydom.presentation.features.base.custom.CustomButtonView>
+            app:buttonText="@string/done"/>
 
     </RelativeLayout>
 
