--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="@dimen/spacing_normal"
         android:text="@string/look_who_come_open_door"/>
 
-    <com.livetyping.moydom.presentation.features.base.custom.CustomButtonView
+    <com.livetyping.moydom.presentation.base.custom.CustomButtonView
         android:id="@+id/activity_onboarding_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,9 +37,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/spacing_two_normal"
         android:gravity="bottom"
-        app:buttonText="@string/next">
-
-    </com.livetyping.moydom.presentation.features.base.custom.CustomButtonView>
+        app:buttonText="@string/next"/>
 
     <ImageView
         android:id="@+id/activity_onboarding_image"
