--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -21,7 +21,7 @@
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="#b3ffffff"/>
 
-    <com.livetyping.moydom.presentation.features.base.custom.MyViewPager
+    <com.livetyping.moydom.presentation.base.custom.MyViewPager
         android:id="@+id/resources_activity_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
